feat: category 색상 기반 검색+fix까지